--- a/DATA/neon.css
+++ b/DATA/neon.css
@@ -13,6 +13,13 @@
   font-weight: 100;
   text-shadow: 0 0 50px #0af, 0 0 3px #fff;
 }
+
+.wkhtmltopdf-slide{
+  height: 266mm !important;
+  padding: 1em 1em 1em 1em !important;
+  background-color: #333;
+}
+
 .deck-container .slide h2 {
   color: #af0;
   border-bottom-color: #ccc;
